# xml2Struct

./: AutoInit.h  CMakeLists.txt  README.md  fieldWrapper.h  fieldWrapper2.h  main.cpp  tinyXmlHelper.cpp
test/: test.xml
